# angrybirds2-cryptor-cli

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
src/: cli.rs  crypto.rs  lib.rs  main.rs  resource.rs
workflows/: rust.yml
