[package]
name = "angrybirds2-cryptor-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.8" }
aes = { version = "0.8.3" }
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.5.7", features = ["derive"] }
rust-embed = { version = "8.4.0", features = ["compression"] }
