[package]
name = "angrybirds2-cryptor-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0" }
aes = { version = "0" }
cbc = { version = "0", features = ["std"] }
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["compression"] }
