[package]
name = "angrybirds2-cryptor-cli"
version = "0.2.0"
edition = "2021"
authors = ["ed1th"]
description = "Angry Birds 2 user data cryptor"
categories = ["command-line-utilities"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LambdaEd1th/angrybirds2-cryptor-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0" }
aes = { version = "0" }
cbc = { version = "0", features = ["std"] }
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["compression"] }
